# abu

./: .gitignore  Cargo.toml  README.md
abu-agent/: Cargo.toml  README.md
abu-agent/examples/: builin_task.rs  mcp_client.rs  skills.rs
abu-agent/mcp/: mcp.exmaples.json  username.py  weather.py
abu-agent/src/: build.rs  error.rs  lib.rs
abu-agent/src/agent/: build.rs  history.rs  kit.rs  mod.rs
abu-agent/src/history/: mod.rs
abu-agent/src/history/memory/: mod.rs  slidingwindow.rs  summary.rs
abu-agent/src/kit/: mcp.rs  mod.rs
abu-agent/src/kit/tools/: mod.rs  skill.rs  terminate.rs
abu-agent/src/llm/: mod.rs
abu-agent/src/memory/: mod.rs  sequential.rs  slidingwindow.rs
abu-agent/src/tool/: bash.rs  calculate.rs  fs.rs  mod.rs  skill.rs
abu-api/: Cargo.toml
abu-api/src/: lib.rs
abu-api/src/chat/: message.rs  mod.rs  request.rs  response.rs  tool.rs
abu-api/src/image/: mod.rs
abu-core/: Cargo.toml
abu-core/src/: error.rs  lib.rs  llm.rs  tool.rs
abu-macros/: Cargo.toml
abu-macros/src/: lib.rs  utils.rs
abu-macros/src/fastmcp/: attr.rs  func.rs  mod.rs
abu-macros/src/tool/: attr.rs  func.rs  mod.rs
abu-mcp/: Cargo.toml  README.md
abu-mcp/examples/: fastmcp.rs  tcp_client.rs  tcp_server.rs
abu-mcp/src/: client.rs  error.rs  lib.rs  server.rs
abu-mcp/src/fastmcp/: mod.rs  prelude.rs
abu-mcp/src/protocol/: mod.rs  notification.rs  request.rs  response.rs  types.rs
abu-mcp/src/transport/: mod.rs  process.rs  stdio.rs  tcp.rs
abu-skill/: Cargo.toml  README.md
abu-skill/src/: error.rs  lib.rs  loader.rs  model.rs
abu-tool/: Cargo.toml
abu-tool/src/: lib.rs  register.rs
examples/: Cargo.toml
examples/mcp_client/: Cargo.toml
