[workspace]
members = [
    "abu-api", 
    "abu-core", 
    "abu-macros", 
]


[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/MoleSir/abu.git"
description = "agent dev kit"
keywords = ["llm", "agent"]
license = "MIT"


[workspace.dependencies]
abu-api = { path = "./abu-api", package = "abu-api", version = "0.1.0" }
abu-core = { path = "./abu-core", package = "abu-core", version = "0.1.0" }
abu-macros = { path = "./abu-macros", package = "abu-macros", version = "0.1.0" }

thiserror = "2.0"
tokio = "1.49"
async-trait = "0.1"
derive_builder = "0.20.2"
reqwest = "0.12.15"
strum = "0.25.0"
serde = "1.0"
serde_json = "1.0"
dotenv = "0.15.0"