[package]
name = "abu-core"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }


[dependencies]
abu-api = { workspace = true }
abu-macros = { workspace = true }
dotenv = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }