[package]
name = "abu-macros"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }


[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
proc-macro-crate = "3.3"