[package]
name = "abu-mcp"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }


[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-std", "process"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
derive_builder = { workspace = true }
tracing = { workspace = true }